Revision history for Perl extension Carp::Assert::More.


2.2.0
        [ENHANCEMENTS]
        Added assert_cmp( $x, $op, $y [, $msg] ), analogous to cmp_ok in Test::More, so you can do
            assert_cmp( $n, '>', 10 );
        which will give better diagnostics than just
            assert( $n > 10 );
        Operators supported are: lt le gt ge == != > >= < <=

        assert_keys_are() now lists all key failures in the message, not just the first one.


2.1.0   Mon Aug 15 19:54:27 CDT 2022
        [ENHANCEMENTS]
        Add diagnostic strings to the failures. For example:

            assert_nonblank( [ 'foo' ], 'This should be nonblank' );

        would fail with:

            Assertion (This should be nonblank) failed!

        but now fails with:

            Assertion (This should be nonblank) failed!
            Value is a reference to ARRAY.

        Similar changes have been made to:
        * assert_all_keys_in
        * assert_keys_are
        * assert_empty
        * assert_nonempty


2.0.1   Fri Aug 13 11:57:15 CDT 2021
        [FIXES]
        assert_all_keys_in() mistakenly required a non-empty list of
        keys to check.

        [ENHANCEMENTS]
        Sped up assert_isa_in(), assert_is().


2.0.0   Thu Aug 12 23:00::00 CDT 2021
        [DIFFERENCES]
        Now requires Perl 5.10 or higher.  No longer requires Carp::Assert.

        The numeric functions are more stringent now.  If it expects
        a number, then you need to pass a number.  For example,
        assert_nonnegative($x) would pass if $x was a non-numeric
        string. Now it must be numeric.

        assert_empty() and assert_nonempty() no longer gives a message
        of "Not an array or hash reference".  If you don't pass an array
        or hash reference, the assertion will just fail with the message
        passe3d in.

        assert_aoh() and assert_datetime() no longer provide a default
        message.
